fix: fix dark mode

--- a/packages/tailwindcss/global.css
+++ b/packages/tailwindcss/global.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @tailwind variants;
 
-#app {
+body {
   @apply dark:bg-gray-700 dark:text-white;
 }
 
